syntax = "proto3";

package orders;

option go_package = "mini-marketplace/proto/orders";

service OrdersService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc ListOrders(ListRequest) returns (ListResponse);
}

message OrderProduct {
  int32 product_id = 1;
  int32 quantity = 2;
  double price = 3;
}

message Order {
  string id = 1;
  string user_id = 2;
  repeated OrderProduct products = 3;
  double total = 4;
  int64 created_at = 5;
}


message CreateOrderRequest {
  string user_id = 1;
  repeated OrderProduct products = 2;
}

message CreateOrderResponse {
  Order order = 1;
}

message GetOrderRequest {
  string id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message ListRequest {
}

message ListResponse {
  repeated Order orders = 1;
}
