syntax = "proto3";

package products;

option go_package = "mini-marketplace/proto/products";

service ProductsService {
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  rpc ReserveProduct(ReserveProductRequest) returns (ReserveProductResponse);
  rpc UpdateProduct (UpdateProductRequest) returns (UpdateProductResponse);
  rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
}

message Product {
  int32 id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
}

message ListProductsRequest {}

message ListProductsResponse {
  repeated Product products = 1;
}

message GetProductRequest {
  int32 id = 1;
}

message GetProductResponse {
  Product product = 1;
}

message CreateProductRequest {
  Product product = 1;
}

message CreateProductResponse {
  Product product = 1;
}

message ReserveProductRequest {
  int32 id = 1;
  int32 quantity = 2;
}

message ReserveProductResponse {
  Product product = 1;
}

message UpdateProductRequest { Product product = 1; }
message UpdateProductResponse { 
    Product product = 1; 
}

message DeleteProductRequest { int32 id = 1; } 
message DeleteProductResponse { bool success = 1; }