package main

import (
	"context"
	"fmt"
	"log"
	"net"

	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
	"google.golang.org/grpc/reflection"

	// Importa tus protos generados
	pbGateway "mini-marketplace/proto/gateway" // El proto p칰blico
	pbOrders "mini-marketplace/proto/orders"   // El proto interno
	pbProducts "mini-marketplace/proto/products"
	pbUsers "mini-marketplace/proto/users" // El proto interno
)

// 1. Definimos el servidor del Gateway
// Este struct almacena las conexiones a los otros microservicios
type gatewayServer struct {
	pbGateway.UnimplementedGatewayServiceServer // Necesario para compatibilidad

	ordersClient   pbOrders.OrdersServiceClient
	usersClient    pbUsers.UsersServiceClient
	productsClient pbProducts.ProductsServiceClient
}

func main() {
	port := 50051 // Puerto est치ndar para gRPC (puedes usar el que quieras)
	lis, err := net.Listen("tcp", fmt.Sprintf(":%d", port))
	if err != nil {
		log.Fatalf("Fallo al escuchar en el puerto %d: %v", port, err)
	}

	// ---------------------------------------------------------
	// 2. CONEXI칍N A MICROSERVICIOS INTERNOS (Service Discovery)
	// En Kubernetes, usamos el nombre del servicio DNS.
	// ---------------------------------------------------------

	// Conectar a Orders Service
	// Nota: Aseg칰rate que el puerto coincida con el que expone tu servicio Orders (ej. 50052)
	ordersConn, err := grpc.NewClient("orders.mini-marketplace.svc.cluster.local:50052", grpc.WithTransportCredentials(insecure.NewCredentials()))
	if err != nil {
		log.Fatalf("No se pudo conectar a Orders: %v", err)
	}
	defer ordersConn.Close()

	// Conectar a Users Service
	// Nota: Seg칰n tus logs anteriores, users escuchaba en 8082
	usersConn, err := grpc.NewClient("users.mini-marketplace.svc.cluster.local:50054", grpc.WithTransportCredentials(insecure.NewCredentials()))
	if err != nil {
		log.Fatalf("No se pudo conectar a Users: %v", err)
	}
	defer usersConn.Close()

	productsConn, err := grpc.NewClient("products.mini-marketplace.svc.cluster.local:50051", grpc.WithTransportCredentials(insecure.NewCredentials()))
	if err != nil {
		log.Fatalf("No se pudo conectar a Products: %v", err)
	}
	defer productsConn.Close()

	// ---------------------------------------------------------
	// 3. INICIALIZAR SERVIDOR GRPC PROPIO
	// ---------------------------------------------------------

	grpcServer := grpc.NewServer()

	// Registramos el Gateway, inyect치ndole los clientes que acabamos de crear
	pbGateway.RegisterGatewayServiceServer(grpcServer, &gatewayServer{
		ordersClient:   pbOrders.NewOrdersServiceClient(ordersConn),
		usersClient:    pbUsers.NewUsersServiceClient(usersConn),
		productsClient: pbProducts.NewProductsServiceClient(productsConn),
	})

	reflection.Register(grpcServer)

	fmt.Printf("游 Gateway gRPC escuchando en el puerto %d\n", port)
	if err := grpcServer.Serve(lis); err != nil {
		log.Fatalf("Fallo al servir gRPC: %v", err)
	}
}

// ---------------------------------------------------------
// 4. IMPLEMENTACI칍N DE LA L칍GICA (Handlers)
// ---------------------------------------------------------

func (s *gatewayServer) PlaceOrder(ctx context.Context, req *pbGateway.PlaceOrderRequest) (*pbGateway.PlaceOrderResponse, error) {
	log.Println("游릭 DEBUG: 춰SOLICITUD RECIBIDA EN GATEWAY!")
	log.Printf("Datos recibidos: UserID=%s", req.UserId)
	log.Printf("Recibida petici칩n de compra para usuario: %s", req.UserId)

	// PASO A: Validar Usuario (Llamada a Users Service)
	// (Opcional, pero buena pr치ctica)
	valResp, err := s.usersClient.ValidateUser(ctx, &pbUsers.ValidateUserRequest{UserId: req.UserId})

	if err != nil {
		log.Printf("Error contactando Users Service: %v", err)
		return &pbGateway.PlaceOrderResponse{Success: false}, err
	}

	if !valResp.Valid {
		log.Printf("Usuario inv치lido o no encontrado: %s", req.UserId)
		// Puedes retornar un error personalizado aqu칤
		return &pbGateway.PlaceOrderResponse{Success: false}, fmt.Errorf("usuario no valido")
	}

	// PASO B: Preparar datos para Orders
	var orderProducts []*pbOrders.OrderProduct
	for _, item := range req.Items {
		prodInfo, err := s.productsClient.GetProduct(ctx, &pbProducts.GetProductRequest{
			Id: item.ProductId,
		})

		if err != nil {
			log.Printf("Error obteniendo producto %s: %v", item.ProductId, err)
			return &pbGateway.PlaceOrderResponse{Success: false}, fmt.Errorf("producto no encontrado: %s", item.ProductId)
		}

		// B. Usar el precio que nos dio el servicio de productos
		orderProducts = append(orderProducts, &pbOrders.OrderProduct{
			ProductId: item.ProductId,
			Quantity:  item.Quantity,
			Price:     prodInfo.Product.Price,
		})
	}

	// PASO C: Crear la Orden (Llamada a Orders Service)
	createResp, err := s.ordersClient.CreateOrder(ctx, &pbOrders.CreateOrderRequest{
		UserId:   req.UserId,
		Products: orderProducts,
	})

	if err != nil {
		log.Printf("Error creando orden: %v", err)
		return &pbGateway.PlaceOrderResponse{Success: false}, err
	}

	var publicProducts []*pbGateway.OrderProduct
	for _, p := range createResp.Order.Products {
		publicProducts = append(publicProducts, &pbGateway.OrderProduct{
			ProductId: p.ProductId,
			Quantity:  p.Quantity,
			Price:     p.Price,
		})
	}

	publicOrder := &pbGateway.Order{
		Id:        createResp.Order.Id,
		UserId:    createResp.Order.UserId,
		Total:     createResp.Order.Total,
		CreatedAt: createResp.Order.CreatedAt,
		Products:  publicProducts,
	}

	log.Printf("Orden creada exitosamente: %s", createResp.Order.Id)

	// PASO D: Responder al Cliente Externo
	return &pbGateway.PlaceOrderResponse{
		Success: true,
		Order:   publicOrder,
	}, nil
}
